First step to PWA

--- a/pages/characterSheet/attributes.html
+++ b/pages/characterSheet/attributes.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en">
+	<head>		
 		<meta charset="utf-8" />
-		<title> ATTRIBUTES </title>
-		<meta name="description" content="Character - Univarsal Character Sheet" />
-		<meta name="theme-color" content="#fff" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Attributes - Universal Character Sheet</title>
+        <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#ffffff" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@site" />
+        <meta name="twitter:url" content="https://darkneet69.github.io/universal-character-sheet/" />
+        <meta name="twitter:title" content="Universal Character Sheet" />
+        <meta name="twitter:description" content="Create dynamic character sheets for any TRPG systems" />
+        <meta name="twitter:image" content="https://darkneet69.github.io/universal-character-sheet//user.png" />
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Universal Character Sheet" />
+        <meta property="og:description" content="Create dynamic character sheets for any TRPG systems" />
+        <meta property="og:site_name" content="universal-character-sheet" />
+        <meta property="og:url" content="https://darkneet69.github.io/universal-character-sheet/" />
+        <meta property="og:image" content="https://darkneet69.github.io/universal-character-sheet//user.png" />
+
+        <link rel="preload" href="/manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="stylesheet" href="/css/native-like-experience.css" />
+        <script async src="https://unpkg.com/pwacompat" crossOrigin="anonymous"></script>
+
+        <!-- Apple touch icon -->
+        <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon_120.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon_180.png" />
+		
 		<link rel="stylesheet" href="../../styles/main-style.css" />
-		<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+		<link rel="stylesheet" href="../../styles/native-like-experience.css" />
+		<!-- <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'> -->
+
 		<script src="../../scripts/app.js"></script>
 	</head>
 	<body>
