--- a/index.html
+++ b/index.html
@@ -185,5 +185,17 @@
 				};
 			}
 		</script>
+
+		<script>
+			if ("serviceWorker" in navigator) {
+				window.addEventListener("load", function () {
+					navigator.serviceWorker
+						.register("../scripts/serviceWorker.js")
+						.then((registration) => {
+							console.log("SW registration successful");
+						});
+				});
+			}
+		</script>
 	</body>
 </html>
