--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
 					navigator.serviceWorker
-						.register("../scripts/serviceWorker.js")
+						.register("scripts/serviceWorker.js")
 						.then((registration) => {
 							console.log("SW registration successful");
 						});
