--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -80,7 +80,7 @@
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
 					navigator.serviceWorker
-						.register("../../scripts/serviceWorker.js")
+						.register("../../serviceWorker.js")
 						.then((registration) => {
 							console.log("SW registration successful");
 						});
