--- a/pages/characterSheet/attributes.html
+++ b/pages/characterSheet/attributes.html
@@ -5,9 +5,10 @@
         <title>Attributes - Universal Character Sheet</title>
         <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#ffffff" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#E6E6F0" />
+		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0b0b0b" />
+        <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
+        <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@site" />
