--- a/index.html
+++ b/index.html
@@ -3,26 +3,18 @@
 	<head>		
 		<meta charset="utf-8" />
         <title>Characters - Universal Character Sheet</title>
-        <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
+        <meta name="description" content="Create customizable character sheets for any TRPG system" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#E6E6F0" />
 		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0b0b0b" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
 
-        <!-- Twitter Card -->
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@site" />
-        <meta name="twitter:url" content="https://darkneet69.github.io/universal-character-sheet/" />
-        <meta name="twitter:title" content="Universal Character Sheet" />
-        <meta name="twitter:description" content="Create dynamic character sheets for any TRPG systems" />
-        <meta name="twitter:image" content="https://darkneet69.github.io/universal-character-sheet//user.png" />
-
         <!-- Open Graph -->
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Universal Character Sheet" />
-        <meta property="og:description" content="Create dynamic character sheets for any TRPG systems" />
-        <meta property="og:site_name" content="universal-character-sheet" />
+        <meta property="og:description" content="Create customizable character sheets for any TRPG system" />
+        <meta property="og:site_name" content="darkneet69.github.io/universal-character-sheet" />
         <meta property="og:url" content="https://darkneet69.github.io/universal-character-sheet/" />
         <meta property="og:image" content="https://darkneet69.github.io/universal-character-sheet//user.png" />
 
