--- a/pages/characterSheet/inventory.html
+++ b/pages/characterSheet/inventory.html
@@ -21,7 +21,6 @@
         <link rel="preload" href="../../manifest.json" />
         <link rel="manifest" href="../../manifest.json" />
         <link rel="stylesheet" href="../../styles/main-style.css" />
-        <link rel="stylesheet" href="../../styles/native-like-experience.css" />
         <script async src="https://unpkg.com/pwacompat" crossOrigin="anonymous"></script>
 
         <!-- Apple touch icon -->
@@ -37,8 +36,8 @@
 					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M7 22H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h2a1 1 0 0 0 0-2H5a5.006 5.006 0 0 0-5 5v14a5.006 5.006 0 0 0 5 5h2a1 1 0 0 0 0-2Z" fill="currentColor" data-original="#000000"></path><path d="m23 11-15.777.032a2.018 2.018 0 0 1 .326-.446l3.879-3.879a1 1 0 1 0-1.414-1.414L6.133 9.172a4 4 0 0 0 0 5.656l3.879 3.879a1 1 0 1 0 1.414-1.414l-3.879-3.879a2.01 2.01 0 0 1-.291-.382L23 13a1 1 0 0 0 0-2Z" fill="currentColor" data-original="#000000"></path></g></svg>
 				</a>
 			</div>
-			<div style="min-width: 0;">
-				<h1 style="user-select: none;"> INVENTORY </h1>
+			<div class="bar-title">
+				<h1> INVENTORY </h1>
 			</div>
 			<div type="button" class="bar-button">
 				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M1 4.75h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2ZM7.333 2a1.75 1.75 0 1 1-1.75 1.75A1.752 1.752 0 0 1 7.333 2ZM23 11h-2.736a3.727 3.727 0 0 0-7.194 0H1a1 1 0 0 0 0 2h12.07a3.727 3.727 0 0 0 7.194 0H23a1 1 0 0 0 0-2Zm-6.333 2.75a1.75 1.75 0 1 1 1.75-1.75 1.752 1.752 0 0 1-1.75 1.75ZM23 19.25H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2ZM7.333 22a1.75 1.75 0 1 1 1.75-1.75A1.753 1.753 0 0 1 7.333 22Z" fill="currentColor" data-original="#000000"></path></g></svg>
