--- a/offline.html
+++ b/offline.html
@@ -17,6 +17,8 @@
     </style>
 </head>
 <body >
-    <h1>You are offline <span>😔</span></h1>
+    <a href="index.html">
+        <h1>You are offline <span>😔</span></h1>
+    </a>
 </body>
 </html>
