--- a/pages/characterSheet/inventory.html
+++ b/pages/characterSheet/inventory.html
@@ -5,8 +5,9 @@
         <title>Inventory - Universal Character Sheet</title>
         <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
-		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191919" />
+        <link rel="stylesheet" href="../../styles/main-style.css" />
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="var(--block-bg-color)" />
+		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="var(--block-bg-color)" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
 
@@ -20,7 +21,6 @@
 
         <link rel="preload" href="../../manifest.json" />
         <link rel="manifest" href="../../manifest.json" />
-        <link rel="stylesheet" href="../../styles/main-style.css" />
         <script async src="https://unpkg.com/pwacompat" crossOrigin="anonymous"></script>
 
         <!-- Apple touch icon -->
