--- a/pages/characterSheet/actions.html
+++ b/pages/characterSheet/actions.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8" />
         <title>Actions - Universal Character Sheet</title>
         <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="stylesheet" href="../../styles/main-style.css" />
-        <meta name="theme-color" media="(prefers-color-scheme: light)" content="var(--block-bg-color)" />
-		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="var(--block-bg-color)" />
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
+		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191919" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
 
