--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>		
 		<meta charset="utf-8" />
-        <title>Settings - Universal Character Sheet</title>
-        <meta name="description" content="Create dynamic character sheets for any TRPG systems" />
+        <title>Settings - Character Sheet Online</title>
+        <meta name="description" content="Create dynamic character sheet for any TRPG system" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="stylesheet" href="../../styles/main-style.css" />
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
@@ -13,11 +13,11 @@
 
         <!-- Open Graph -->
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Universal Character Sheet" />
-        <meta property="og:description" content="Create customizable character sheets for any TRPG system" />
-        <meta property="og:site_name" content="darkneet69.github.io/universal-character-sheet" />
-        <meta property="og:url" content="https://darkneet69.github.io/universal-character-sheet/" />
-        <meta property="og:image" content="https://darkneet69.github.io/universal-character-sheet//user.png" />
+        <meta property="og:title" content="Character Sheet Online" />
+        <meta property="og:description" content="Create customizable character sheet for any TRPG system" />
+        <meta property="og:site_name" content="character.sheet.online" />
+        <meta property="og:url" content="https://darkneet69.github.io/character.sheet.online" />
+        <meta property="og:image" content="https://darkneet69.github.io/character.sheet.online/user.png" />
 
         <link rel="preload" href="../../manifest.json" />
         <link rel="manifest" href="../../manifest.json" />
