--- a/pages/characterSheet/inventory.html
+++ b/pages/characterSheet/inventory.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>		
 		<meta charset="utf-8" />
-        <title>Inventory - Character Sheet Online</title>
+        <title>Character Sheet Online</title>
         <meta name="description" content="Create dynamic character sheet for any TRPG system" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="stylesheet" href="../../styles/main-style.css" />
