--- a/pages/characterSheet/actions.html
+++ b/pages/characterSheet/actions.html
@@ -54,7 +54,11 @@
 			</div>
         </menu>
 
-        <main propertyPath="actions"></main>
+        <main propertyPath="actions">
+			<div type="button" class="roll-button" id="rollButton">
+				<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="m20.717 4.43-6.3-3.764a4.714 4.714 0 0 0-4.834 0l-6.3 3.764A4.704 4.704 0 0 0 1 8.446v7.109c0 1.636.875 3.174 2.283 4.016l6.3 3.764a4.721 4.721 0 0 0 4.834 0l6.3-3.764A4.704 4.704 0 0 0 23 15.555V8.446a4.704 4.704 0 0 0-2.283-4.016Zm-6.813-2.905 6.3 3.764c.498.297.911.706 1.215 1.183l-4.325 2.17-4.181-7.528c.343.087.678.224.991.412ZM12 1.529l4.153 7.47H7.85L12 1.53Zm-8.205 3.76 6.301-3.764a3.69 3.69 0 0 1 .992-.412l-4.18 7.529L2.582 6.47a3.677 3.677 0 0 1 1.214-1.181ZM2.019 15.927a3.556 3.556 0 0 1-.02-.373V8.445c0-.365.056-.724.161-1.067l4.232 2.125-4.372 6.424Zm4.948-5.495 4.115 6.996-8.437-.645 4.322-6.351Zm4.532 12.536a3.718 3.718 0 0 1-1.404-.493l-6.3-3.764a3.666 3.666 0 0 1-1.027-.915l8.732.662v4.51ZM7.874 10h8.251L12 17.014 7.875 10Zm12.33 8.711-6.3 3.764a3.702 3.702 0 0 1-1.404.494v-4.504l8.723-.657c-.277.357-.62.666-1.018.903Zm-7.292-1.276 4.123-7.009 4.432 6.36-8.555.649Zm9.087-1.88c0 .078-.003.157-.008.234l-4.383-6.286 4.231-2.123c.105.342.16.7.16 1.065v7.109Z" fill="var(--major-text-color)" data-original="#000000" class=""></path></g></svg>
+			</div>
+		</main>
 
         <nav class="navbar">
             <div>
@@ -100,6 +104,7 @@
 						<option value="label">Label</option>
 						<option value="text">Text</option>
 						<option value="number">Number</option>
+						<option value="button">Button</option>
 						<option value="calc">Calc</option>
 					</select>
 					<input type="submit" id="blockSave" value="Save" style="color: rgba(0, 128, 255, 0.8);">
