--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="stylesheet" href="../../styles/main-style.css" />
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
-		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#191919" />
+		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1b1c1e" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
 
         <!-- Open Graph -->
         <meta property="og:type" content="website" />
