--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
         <title>Character Sheet Online</title>
         <meta name="description" content="Create customizable character sheet for any TRPG system" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<link rel="stylesheet" href="styles/main-style.css" />
         <meta name="theme-color" content="var(--block-bg-color)" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
