--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="description" content="Create customizable character sheet for any TRPG system" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<link rel="stylesheet" href="styles/main-style.css" />
-        <meta name="theme-color" content="var(--block-bg-color)" />
+        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
+		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1b1c1e" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
         <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
