--- a/pages/workshop/workshop.html
+++ b/pages/workshop/workshop.html
@@ -38,7 +38,7 @@
 			<menu>
 				<div></div>
 				<div class="bar-title">
-					<h1> SETTINGS </h1>
+					<h1> WORKSHOP </h1>
 				</div>
 				<div></div>
 			</menu>
@@ -47,7 +47,9 @@
 
 		<div class="main-wrapper">
 			<main>
-				<input type="button" value="DELETE DATABASE" onclick="deleteIndexedDB();" style="color: rgba(255, 0, 0, 0.8);">            
+                <h1>
+                    COMING SOON
+                </h1>
 			</main>
 		</div>
 
@@ -68,14 +70,14 @@
 					</a>
 				</div>
 				<div>
-					<a href="../workshop/workshop.html">
+					<a href="">
 						<div class="bar-button">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M24 10a.988.988 0 0 0-.024-.217l-1.3-5.868A4.968 4.968 0 0 0 17.792 0H6.208a4.968 4.968 0 0 0-4.88 3.915L.024 9.783A.988.988 0 0 0 0 10v1a3.984 3.984 0 0 0 1 2.643V19a5.006 5.006 0 0 0 5 5h12a5.006 5.006 0 0 0 5-5v-5.357A3.984 3.984 0 0 0 24 11Zm-22 .109 1.28-5.76A2.982 2.982 0 0 1 6.208 2H7v3a1 1 0 0 0 2 0V2h6v3a1 1 0 0 0 2 0V2h.792a2.982 2.982 0 0 1 2.928 2.349l1.28 5.76V11a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2 1 1 0 0 0-2 0 2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2 1 1 0 0 0-2 0 2 2 0 0 1-2 2H4a2 2 0 0 1-2-2ZM18 22H6a3 3 0 0 1-3-3v-4.127A3.978 3.978 0 0 0 4 15h1a3.99 3.99 0 0 0 3-1.357A3.99 3.99 0 0 0 11 15h2a3.99 3.99 0 0 0 3-1.357A3.99 3.99 0 0 0 19 15h1a3.978 3.978 0 0 0 1-.127V19a3 3 0 0 1-3 3Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
 						</div>
 					</a>
 				</div>
 				<div>
-					<a href="settings.html">
+					<a href="../settings/settings.html">
 						<div class="bar-button">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M1 4.75h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2ZM7.333 2a1.75 1.75 0 1 1-1.75 1.75A1.752 1.752 0 0 1 7.333 2ZM23 11h-2.736a3.727 3.727 0 0 0-7.194 0H1a1 1 0 0 0 0 2h12.07a3.727 3.727 0 0 0 7.194 0H23a1 1 0 0 0 0-2Zm-6.333 2.75a1.75 1.75 0 1 1 1.75-1.75 1.752 1.752 0 0 1-1.75 1.75ZM23 19.25H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2ZM7.333 22a1.75 1.75 0 1 1 1.75-1.75A1.753 1.753 0 0 1 7.333 22Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
 						</div>
