--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="card-title" id="characterName">  </div>
 							<div class="card-template" id="characterSheet">  </div>
 						</div>
-						<div type="button" class="minor-button" id="characterCardMenu" style="position: absolute;top: 10px; right: 10px;">
+						<div type="button" class="minor-button" id="characterCardMenu">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="15" height="15" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><circle cx="458.667" cy="256" r="53.333" fill="currentColor" data-original="#000000" class=""></circle><circle cx="256" cy="256" r="53.333" fill="currentColor" data-original="#000000" class=""></circle><circle cx="53.333" cy="256" r="53.333" fill="currentColor" data-original="#000000" class=""></circle></g></svg>
 						</div>
 					</div>
