--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 		<dialog id="characterCardDialog">
 			<div style="display: flex; flex-direction: column; gap: 10px;">
 				<div class="card-title" id="characterName" style="text-align: center;">  </div>
-				<input type="button" id="dialogClose" value="✕" style="position: absolute;top: 10px; right: 10px;" onclick="characterCardDialog.close();">
-				<input type="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: rgba(0, 128, 255, 0.8);">
-				<input type="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: rgba(255, 0, 0, 0.8);">
+				<div class="minor-button" id="dialogClose" style="position: absolute;top: 5px; right: 10px;" onclick="characterCardDialog.close();">✕</div>
+				<input type="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: var(--blue-color);">
+				<input type="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: var(--red-color);">
 			</div>
 		</dialog>
 
