--- a/pages/characterSheet/inventory.html
+++ b/pages/characterSheet/inventory.html
@@ -36,23 +36,15 @@
 	<body>
 		<div class="menu-wrapper">
 			<menu>
-				<div>
-					<a href="../../index.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M7 22H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h2a1 1 0 0 0 0-2H5a5.006 5.006 0 0 0-5 5v14a5.006 5.006 0 0 0 5 5h2a1 1 0 0 0 0-2Z" fill="var(--major-text-color)" data-original="#000000"></path><path d="m23 11-15.777.032a2.018 2.018 0 0 1 .326-.446l3.879-3.879a1 1 0 1 0-1.414-1.414L6.133 9.172a4 4 0 0 0 0 5.656l3.879 3.879a1 1 0 1 0 1.414-1.414l-3.879-3.879a2.01 2.01 0 0 1-.291-.382L23 13a1 1 0 0 0 0-2Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
+				<a class="bar-button" href="../../index.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M7 22H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h2a1 1 0 0 0 0-2H5a5.006 5.006 0 0 0-5 5v14a5.006 5.006 0 0 0 5 5h2a1 1 0 0 0 0-2Z" fill="var(--major-text-color)" data-original="#000000"></path><path d="m23 11-15.777.032a2.018 2.018 0 0 1 .326-.446l3.879-3.879a1 1 0 1 0-1.414-1.414L6.133 9.172a4 4 0 0 0 0 5.656l3.879 3.879a1 1 0 1 0 1.414-1.414l-3.879-3.879a2.01 2.01 0 0 1-.291-.382L23 13a1 1 0 0 0 0-2Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
 				<div class="bar-title">
-					<h1> INVENTORY </h1>
+					<h1> BIO </h1>
 				</div>
-				<div>
-					<a href="../settings/settings.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M1 4.75h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2ZM7.333 2a1.75 1.75 0 1 1-1.75 1.75A1.752 1.752 0 0 1 7.333 2ZM23 11h-2.736a3.727 3.727 0 0 0-7.194 0H1a1 1 0 0 0 0 2h12.07a3.727 3.727 0 0 0 7.194 0H23a1 1 0 0 0 0-2Zm-6.333 2.75a1.75 1.75 0 1 1 1.75-1.75 1.752 1.752 0 0 1-1.75 1.75ZM23 19.25H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2ZM7.333 22a1.75 1.75 0 1 1 1.75-1.75A1.753 1.753 0 0 1 7.333 22Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
+				<a class="bar-button" href="../settings/settings.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M1 4.75h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2ZM7.333 2a1.75 1.75 0 1 1-1.75 1.75A1.752 1.752 0 0 1 7.333 2ZM23 11h-2.736a3.727 3.727 0 0 0-7.194 0H1a1 1 0 0 0 0 2h12.07a3.727 3.727 0 0 0 7.194 0H23a1 1 0 0 0 0-2Zm-6.333 2.75a1.75 1.75 0 1 1 1.75-1.75 1.752 1.752 0 0 1-1.75 1.75ZM23 19.25H10.931a3.728 3.728 0 0 0-7.195 0H1a1 1 0 0 0 0 2h2.736a3.728 3.728 0 0 0 7.195 0H23a1 1 0 0 0 0-2ZM7.333 22a1.75 1.75 0 1 1 1.75-1.75A1.753 1.753 0 0 1 7.333 22Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
 			</menu>
 		</div>
 
@@ -66,34 +58,18 @@
 
 		<div class="nav-wrapper">
 			<nav>
-				<div>
-					<a href="bio.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
-				<div>
-					<a href="attributes.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M19 2h-1V1a1 1 0 0 0-2 0v1H8V1a1 1 0 0 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h4a1 1 0 0 0 0-2H5c-1.654 0-3-1.346-3-3v-9h21a1 1 0 0 0 1-1V7c0-2.757-2.243-5-5-5Zm3 6H2V7c0-1.654 1.346-3 3-3h14c1.654 0 3 1.346 3 3v1Zm-3.121 4.879-5.707 5.707A3.976 3.976 0 0 0 12 21.415v1.586a1 1 0 0 0 1 1h1.586a3.973 3.973 0 0 0 2.828-1.172l5.707-5.707c.567-.567.879-1.32.879-2.122s-.312-1.555-.878-2.121c-1.134-1.134-3.11-1.134-4.243 0Zm2.828 2.828-5.708 5.707a1.983 1.983 0 0 1-1.414.586h-.586v-.586c0-.534.208-1.036.586-1.414l5.708-5.707a1.023 1.023 0 0 1 1.414 0c.189.188.293.439.293.707s-.104.518-.293.707ZM5 14a1 1 0 0 1 1-1h7a1 1 0 0 1 0 2H6a1 1 0 0 1-1-1Zm6 4a1 1 0 0 1-1 1H6a1 1 0 0 1 0-2h4a1 1 0 0 1 1 1Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
-				<div>
-					<a href="inventory.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M14.648 5.493c.872-.701 1.772-1.643 2.227-2.788a1.948 1.948 0 0 0-.203-1.816A2.017 2.017 0 0 0 15 0H9a2.02 2.02 0 0 0-1.672.889 1.948 1.948 0 0 0-.204 1.814c.456 1.146 1.355 2.089 2.228 2.789C4.695 7.221 1 13.159 1 18c0 3.309 2.691 6 6 6h10c3.309 0 6-2.691 6-6 0-4.841-3.695-10.779-8.352-12.507Zm.368-3.528c-.515 1.296-2.094 2.393-3.018 2.91-.923-.513-2.495-1.6-2.999-2.875l6.017-.035ZM16.999 22H7c-2.206 0-4-1.794-4-4 0-5.243 4.71-11 9-11s9 5.757 9 11c0 2.206-1.794 4-4 4Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
-				<div>
-					<a href="actions.html">
-						<div class="bar-button">
-							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M19 24h-5a5.006 5.006 0 0 1-5-5v-5a5.006 5.006 0 0 1 5-5h5a5.006 5.006 0 0 1 5 5v5a5.006 5.006 0 0 1-5 5Zm-5-13a3 3 0 0 0-3 3v5a3 3 0 0 0 3 3h5a3 3 0 0 0 3-3v-5a3 3 0 0 0-3-3Zm0 2a1 1 0 1 0 1 1 1 1 0 0 0-1-1Zm5 5a1 1 0 1 0 1 1 1 1 0 0 0-1-1ZM9 7a1 1 0 1 0-1-1 1 1 0 0 0 1 1ZM7 9a1 1 0 1 0-1 1 1 1 0 0 0 1-1Zm-.22 6.826a1 1 0 0 0-.154-1.405 3.15 3.15 0 0 1-.251-.228l-3.511-3.559a3.005 3.005 0 0 1 .029-4.243l3.56-3.511a2.98 2.98 0 0 1 2.106-.864h.022a2.981 2.981 0 0 1 2.115.893L14.2 6.465c.057.058.111.117.163.179A1 1 0 1 0 15.9 5.356c-.083-.1-.17-.194-.266-.292L12.12 1.505a5 5 0 0 0-7.071-.049l-3.56 3.511a5.007 5.007 0 0 0-.049 7.071L4.951 15.6a4.865 4.865 0 0 0 .423.381 1 1 0 0 0 1.406-.153Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
-						</div>
-					</a>
-				</div>
+				<a class="bar-button" href="bio.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
+				<a class="bar-button" href="attributes.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M19 2h-1V1a1 1 0 0 0-2 0v1H8V1a1 1 0 0 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h4a1 1 0 0 0 0-2H5c-1.654 0-3-1.346-3-3v-9h21a1 1 0 0 0 1-1V7c0-2.757-2.243-5-5-5Zm3 6H2V7c0-1.654 1.346-3 3-3h14c1.654 0 3 1.346 3 3v1Zm-3.121 4.879-5.707 5.707A3.976 3.976 0 0 0 12 21.415v1.586a1 1 0 0 0 1 1h1.586a3.973 3.973 0 0 0 2.828-1.172l5.707-5.707c.567-.567.879-1.32.879-2.122s-.312-1.555-.878-2.121c-1.134-1.134-3.11-1.134-4.243 0Zm2.828 2.828-5.708 5.707a1.983 1.983 0 0 1-1.414.586h-.586v-.586c0-.534.208-1.036.586-1.414l5.708-5.707a1.023 1.023 0 0 1 1.414 0c.189.188.293.439.293.707s-.104.518-.293.707ZM5 14a1 1 0 0 1 1-1h7a1 1 0 0 1 0 2H6a1 1 0 0 1-1-1Zm6 4a1 1 0 0 1-1 1H6a1 1 0 0 1 0-2h4a1 1 0 0 1 1 1Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
+				<a class="bar-button" href="inventory.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M14.648 5.493c.872-.701 1.772-1.643 2.227-2.788a1.948 1.948 0 0 0-.203-1.816A2.017 2.017 0 0 0 15 0H9a2.02 2.02 0 0 0-1.672.889 1.948 1.948 0 0 0-.204 1.814c.456 1.146 1.355 2.089 2.228 2.789C4.695 7.221 1 13.159 1 18c0 3.309 2.691 6 6 6h10c3.309 0 6-2.691 6-6 0-4.841-3.695-10.779-8.352-12.507Zm.368-3.528c-.515 1.296-2.094 2.393-3.018 2.91-.923-.513-2.495-1.6-2.999-2.875l6.017-.035ZM16.999 22H7c-2.206 0-4-1.794-4-4 0-5.243 4.71-11 9-11s9 5.757 9 11c0 2.206-1.794 4-4 4Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
+				<a class="bar-button" href="actions.html">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M19 24h-5a5.006 5.006 0 0 1-5-5v-5a5.006 5.006 0 0 1 5-5h5a5.006 5.006 0 0 1 5 5v5a5.006 5.006 0 0 1-5 5Zm-5-13a3 3 0 0 0-3 3v5a3 3 0 0 0 3 3h5a3 3 0 0 0 3-3v-5a3 3 0 0 0-3-3Zm0 2a1 1 0 1 0 1 1 1 1 0 0 0-1-1Zm5 5a1 1 0 1 0 1 1 1 1 0 0 0-1-1ZM9 7a1 1 0 1 0-1-1 1 1 0 0 0 1 1ZM7 9a1 1 0 1 0-1 1 1 1 0 0 0 1-1Zm-.22 6.826a1 1 0 0 0-.154-1.405 3.15 3.15 0 0 1-.251-.228l-3.511-3.559a3.005 3.005 0 0 1 .029-4.243l3.56-3.511a2.98 2.98 0 0 1 2.106-.864h.022a2.981 2.981 0 0 1 2.115.893L14.2 6.465c.057.058.111.117.163.179A1 1 0 1 0 15.9 5.356c-.083-.1-.17-.194-.266-.292L12.12 1.505a5 5 0 0 0-7.071-.049l-3.56 3.511a5.007 5.007 0 0 0-.049 7.071L4.951 15.6a4.865 4.865 0 0 0 .423.381 1 1 0 0 0 1.406-.153Z" fill="var(--major-text-color)" data-original="#000000"></path></g></svg>
+				</a>
 			</nav>
 		</div>
 
