--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 			<div style="display: flex; flex-direction: column; gap: 10px;">
 				<div class="card-title" id="characterName" style="text-align: center;">  </div>
 				<div class="minor-button" id="dialogClose" style="position: absolute;top: 5px; right: 10px;" onclick="characterCardDialog.close();">✕</div>
-				<input type="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: var(--blue-color);">
-				<input type="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: var(--red-color);">
+				<input type="button" class="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: var(--blue-color);">
+				<input type="button" class="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: var(--red-color);">
 			</div>
 		</dialog>
 
