--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -47,7 +47,7 @@
 
 		<div class="main-wrapper">
 			<main>
-				<input type="button" value="DELETE DATABASE" onclick="deleteIndexedDB();" style="color: rgba(255, 0, 0, 0.8);">            
+				<input type="button" value="DELETE DATABASE" onclick="deleteIndexedDB();" style="color: var(--red-color);">            
 			</main>
 		</div>
 
