--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
         <meta name="description" content="Create customizable character sheet for any TRPG system" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<link rel="stylesheet" href="styles/main-style.css" />
-        <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
-		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1b1c1e" />
+        <meta name="theme-color" content="var(--block-bg-color)" />
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<!--
-        <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: light)" content="default" />
-        <meta name="apple-mobile-web-app-status-bar-style" media="(prefers-color-scheme: dark)" content="black-translucent" />
-		-->
 
         <!-- Open Graph -->
         <meta property="og:type" content="website" />
@@ -94,8 +89,8 @@
 			<div style="display: flex; flex-direction: column; gap: 10px;">
 				<div class="card-title" id="characterName" style="text-align: center;">  </div>
 				<div class="minor-button" id="dialogClose" style="position: absolute;top: 5px; right: 10px;" onclick="characterCardDialog.close();">✕</div>
-				<input type="button" class="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: var(--blue-color);">
-				<input type="button" class="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: var(--red-color);">
+				<input type="button" id="dialogClone" value="CLONE" onclick="cloneCharacter(dialogCharacter);" style="color: var(--blue-color);">
+				<input type="button" id="dialogDelete" value="DELETE" onclick="deleteCharacter(dialogCharacter.id);" style="color: var(--red-color);">
 			</div>
 		</dialog>
 
