--- a/pages/characterSheet/attributes.html
+++ b/pages/characterSheet/attributes.html
@@ -60,7 +60,7 @@
 				<a class="bar-button" href="bio.html">
 					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z" fill="currentColor" data-original="#000000"></path></g></svg>
 				</a>
-				<a class="bar-button" href="attributes.html">
+				<a class="bar-button currentPage" href="attributes.html">
 					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"><g><path d="M19 2h-1V1a1 1 0 0 0-2 0v1H8V1a1 1 0 0 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h4a1 1 0 0 0 0-2H5c-1.654 0-3-1.346-3-3v-9h21a1 1 0 0 0 1-1V7c0-2.757-2.243-5-5-5Zm3 6H2V7c0-1.654 1.346-3 3-3h14c1.654 0 3 1.346 3 3v1Zm-3.121 4.879-5.707 5.707A3.976 3.976 0 0 0 12 21.415v1.586a1 1 0 0 0 1 1h1.586a3.973 3.973 0 0 0 2.828-1.172l5.707-5.707c.567-.567.879-1.32.879-2.122s-.312-1.555-.878-2.121c-1.134-1.134-3.11-1.134-4.243 0Zm2.828 2.828-5.708 5.707a1.983 1.983 0 0 1-1.414.586h-.586v-.586c0-.534.208-1.036.586-1.414l5.708-5.707a1.023 1.023 0 0 1 1.414 0c.189.188.293.439.293.707s-.104.518-.293.707ZM5 14a1 1 0 0 1 1-1h7a1 1 0 0 1 0 2H6a1 1 0 0 1-1-1Zm6 4a1 1 0 0 1-1 1H6a1 1 0 0 1 0-2h4a1 1 0 0 1 1 1Z" fill="currentColor" data-original="#000000"></path></g></svg>
 				</a>
 				<a class="bar-button" href="inventory.html">
